--- a/info/index.html
+++ b/info/index.html
@@ -11,17 +11,17 @@
 	<body>
 		<div class="box" style="padding:0;width:780px;background-color:#b0c4de;">
 			<div id="banner" style="text-align:left;">
-				<div style="width:30%;height:99%;float:left;">
+				<div style="width:30%;height:100%;float:left;">
 				<p> <p>
 				<p> <p>
 										<a style="float:left;color:white;font-family:Verdana;font-size:12px;font-weight:bold;margin:5px;" href="http://www.nyan.cat/">ReBLOX.COM (Alpha-test)</a>
 									</div>
-											<div style="width:33.33%;height:99%;float:left;">
+											<div style="width:33.33%;height:100%;float:left;">
 			<img src="./backdrop/logo.png" style="margin:auto;">
 		</div>
 			</div>
 			
-			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="http://www.nyan.cat/">Home</a>  |  <a style="color:white;" href="http://www.nyan.cat/">Games</a>  |  <a style="color:white;" href="http://www.nyan.cat/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="http://www.nyan.cat/">Info</a></h1><h1>
+			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="https://rebloxia.github.io/">Home</a>  |  <a style="color:white;" href="https://rebloxia.github.io/games/">Games</a>  |  <a style="color:white;" href="https://rebloxia.github.io/user/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="https://rebloxia.github.io/info">Info</a></h1><h1>
 		</h1></div>
 		
 		<div style="width:800px;margin:auto;overflow:auto;margin-top:40px;">
