--- a/games/index.html
+++ b/games/index.html
@@ -14,7 +14,7 @@
 				<div style="width:30%;height:100%;float:left;">
 				<p> <p>
 				<p> <p>
-										<a style="float:left;color:white;font-family:Verdana;font-size:12px;font-weight:bold;margin:5px;" href="http://www.nyan.cat/">ReBLOX.COM (Alpha-test)</a>
+										<a style="float:left;color:white;font-family:Verdana;font-size:12px;font-weight:bold;margin:5px;" href="http://www.nyan.cat/">ReBLOX.github.io</a>
 									</div>
 											<div style="width:33.33%;height:100%;float:left;">
 			<img src="./backdrop/logo.png" style="margin:auto;">
