--- a/login/index.html
+++ b/login/index.html
@@ -1,1 +1,4 @@
-<meta http-equiv="Refresh" content="5; url="http://www.nyan.cat/" />
+ <body>
+    <div style="width:100%; height:30px; background-color:#cccccc;"><b><center>login deez nuts</center></b></div>
+    <iframe src="http://www.nyan.cat/" style="width:100%; height:100%;"></iframe>
+</body>
