--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 					</td>
 	</tr><tr>
 		<td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl1_ContentImage1" title="Cruss Kilderstrohe&#39;s Place" href="http://web.archive.org/web/20061110103601/https://www.ReBLOX.com/User.aspx?id=2012" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level.ashx" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl1_ContentImage1" title="Cruss Kilderstrohe&#39;s Place" href="fuck you" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level.ashx" border="0"></a>
 					</td><td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl3_ContentImage1" title="Pirate Ship" href="http://web.archive.org/web/20061110103601/https://www.ReBLOX.com/User.aspx?id=169" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level(1).ashx" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl3_ContentImage1" title="Pirate Ship" href="fuck you" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level(1).ashx" border="0"></a>
 					</td><td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl5_ContentImage1" title="Stairway to Heaven" href="http://web.archive.org/web/20061110103601/https://www.ReBLOX.com/User.aspx?id=1151" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level(2).ashx" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl5_ContentImage1" title="Stairway to Heaven" href="fuck you" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level(2).ashx" border="0"></a>
 					</td><td>
-						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl7_ContentImage1" title="Mustafar" href="http://web.archive.org/web/20061110103601/https://www.ReBLOX.com/User.aspx?id=1134" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level(3).ashx" border="0"></a>
+						<a id="_ctl0_ContentPlaceHolder1_DataListCoolPlace__ctl7_ContentImage1" title="Mustafar" href="fuck you" style="display:inline-block;cursor:hand;"><img src="./backdrop/Level(3).ashx" border="0"></a>
 					</td>
 	</tr>
 	</tr>
