--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 					<p>A  new release of ReBLOX is out! New features include:</p>
 					<ul style="text-align:left">
 						<li>Finished main site! 🌟 </li>
-						<li>Login troll complete!</li>
-						<li>More being worked on! Games and User page next!</li>
+						<li>Finished games!</li>
+						<li>Finished info!</li>
+						<li>Working on Browse (fake User) and Discord. Stay tuned.</li>
 					</ul>
 				</div>
 			</td>
