--- a/index.html
+++ b/index.html
@@ -128,7 +128,14 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 						</td>
 		</tr><tr>
 			<td align="center">
-			<img src="./backdrop/cool.jpg" alt="Multiplayer Games">
+			<img src="./backdrop/cool.jpg" alt="funny face">
+					
+						</td>
+		</tr><tr>
+				</tr><tr>
+			<td align="center">
+			<a href="https://discord.gg/tyNrYMk">
+<img border="0" alt="niggaBLOCKS" src="./backdrop/nb.png" width="100" height="87">
 							<p>&nbsp;</p>
 						</td>
 		</tr><tr>
