--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 		</tr><tr>
 				</tr><tr>
 			<td align="center">
-			<a href="https://discord.gg/tyNrYMk">
+			<a href="http://niggerblox.cf/">
 <img border="0" alt="niggaBLOCKS" src="./backdrop/nb.png" width="100" height="87">
 							<p>&nbsp;</p>
 						</td>
