--- a/user/index.html
+++ b/user/index.html
@@ -59,7 +59,68 @@
 
 	<br>
 	
-
+		
+		<div style="width:780px;margin:auto;overflow:auto;margin-top:10px;">
+			<div style="float:left;width:100%;padding-right:px;box-sizing:border-box;">
+				<div style="background-color:#ffffff;border:1px solid black;">
+			txarrak's Friends
+			<p> <p>
+			
+			<div id="FriendliestFolk">
+	<table id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk" cellspacing="0" border="0">
+	<tbody><tr>
+		<td>
+			<div class="Friend">
+				<div class="Avatar"><img src="./backdrop/Model(5).ashx" border="0"></a></div>
+				<div class="Summary">
+					<img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
+					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
+				</div>
+			</div>
+		</td><td>
+			<div class="Friend">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl1_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=3417" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(5).ashx" border="0"></a></div>
+				<div class="Summary">
+					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
+					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
+				</div>
+			</div>
+		</td><td>
+			<div class="Friend">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl2_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=3638" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(6).ashx" border="0"></a></div>
+				<div class="Summary">
+					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
+					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
+				</div>
+			</div>
+		</td><td>
+			<div class="Friend">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=3113" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(6).ashx" border="0"></a></div>
+				<div class="Summary">
+					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
+					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
+				</div>
+			</div>
+		</td><td>
+			<div class="Friend">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=6665" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(5).ashx" border="0"></a></div>
+				<div class="Summary">
+					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
+					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
+				</div>
+			</div>
+		</td><td></td>
+	</tr>
+</tbody></table>
+</div></div>
+			
+			
+			
+			
+			
+				</div>		
+				<p> <p>
+			</div>
 
 
 							</div>
@@ -67,7 +128,7 @@
 					</tr>
 					<tr>
 						<td style="padding-left: 8px; padding-top: 12px">
-							<hr width="46%">
+							<hr width="71%">
 							
 							<div class="Legal" style="text-align: center">
 															Most of the assets on this site are from ROBLOX and I do not claim to own any of their assets.<br>
