--- a/user/index.html
+++ b/user/index.html
@@ -70,45 +70,16 @@
 	<table id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk" cellspacing="0" border="0">
 	<tbody><tr>
 		<td>
-			<div class="Friend">
-				<div class="Avatar"><img src="./backdrop/Model(5).ashx" border="0"></a></div>
-				<div class="Summary">
-					<img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
-				</div>
-			</div>
+		<!-- -->
 		</td><td>
 			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl1_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=3417" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(5).ashx" border="0"></a></div>
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="test" href="http://www.nyan.cat/"" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(6).ashx" border="0"></a></div>
 				<div class="Summary">
 					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
 					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
 				</div>
 			</div>
-		</td><td>
-			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl2_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=3638" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(6).ashx" border="0"></a></div>
-				<div class="Summary">
-					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
-				</div>
-			</div>
-		</td><td>
-			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=3113" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(6).ashx" border="0"></a></div>
-				<div class="Summary">
-					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
-				</div>
-			</div>
-		</td><td>
-			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="test" href="https://web.archive.org/web/20061110103601/http://roblox.com/User.aspx?ID=6665" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(5).ashx" border="0"></a></div>
-				<div class="Summary">
-					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
-				</div>
-			</div>
+<!-- -->
 		</td><td></td>
 	</tr>
 </tbody></table>
