--- a/index.html
+++ b/index.html
@@ -155,16 +155,11 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 	<table id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk" cellspacing="0" border="0">
 	<tbody><tr>
 		</td><td>
-<img src="./backdrop/Model(5).ashx" border="0">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="meowie" href="http://www.nyan.cat/"" style=""><img src="./backdrop/meowie.png" border="0"></a></div>
+				<div class="Summary">
+					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
+					<a style="font-size:12px" href="http://www.nyan.cat/">meowie</a></td>
 				</div>
-			</div>
-		</td><td>
-<img src="./backdrop/Model(5).ashx" border="0">
-				</div>
-			</div>
-		</td><td>
-				<img src="./backdrop/Model(5).ashx" border="0">
-			</div>
 		</td><td></td>
 	</tr>
 </tbody></table>
