--- a/user/index.html
+++ b/user/index.html
@@ -73,10 +73,10 @@
 		<!-- -->
 		</td><td>
 			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="test" href="http://www.nyan.cat/"" style="display:inline-block;cursor:hand;"><img src="./backdrop/Model(6).ashx" border="0"></a></div>
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="meowie" href="http://www.nyan.cat/"" style=""><img src="./backdrop/meowie.png" border="0"></a></div>
 				<div class="Summary">
 					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">test</a></td>
+					<a style="font-size:12px" href="http://www.nyan.cat/">meowie</a></td>
 				</div>
 			</div>
 <!-- -->
