--- a/user/2.html
+++ b/user/2.html
@@ -29,16 +29,15 @@
 <div style="width:780px;margin:auto;overflow:auto;margin-top:10px;">
 			<div style="float:left;width:40%;padding-right:px;box-sizing:border-box;">
 				<div style="background-color:#B0C4DE;border:1px solid black;">
-					<center><p style="font-size:16">txarrak</p></center>
+					<center><p style="font-size:16">shull</p></center>
 					<p ><font color="grey">[ Offline ]</font><p>
-					<img src="backdrop/txarrak.png">
+					<img src="backdrop/shull.png">
 			<p> <p>
 			<p><font color="blue">Send Message</font></a>
 			<p> <p>
 			<p><font color="blue">Send Friend Request</font></a>
 			<p> <p>
-			Nothing works!
-			Take that, establishment!
+			 I do football, track, and wrestle pretty epic
 			<p> <p>
 				</div>		
 				<p> <p>
@@ -46,10 +45,11 @@
 
 								<div style="float:left;width:60%;box-sizing:border-box;">
 				<div style="float:right;width:90%;padding-left:0px;background-color:#B0C4DE;border:1px solid black;">
-					<center><p style="font-size:16">txarrak's Place</p></center>
-					<img src="backdrop/locked.png">Private
+					<center><p style="font-size:16">shull's Place</p></center>
+					<p> <p>
+					This person doesn't have any plaes.
 					<div>
-					<img src="backdrop/Level.jpg">
+					<!-- -->
 			</div>
 			<p> <p>
 				</div>
@@ -63,22 +63,25 @@
 		<div style="width:780px;margin:auto;overflow:auto;margin-top:10px;">
 			<div style="float:left;width:100%;padding-right:px;box-sizing:border-box;">
 				<div style="background-color:#ffffff;border:1px solid black;">
-			txarrak's Friends <font color="blue">(1)</font>
+			shull's Friends <font color="blue">(0)</font>
 			<p> <p>
+			<p> <p>
+			<p> <p>
+			<p> <p>
+			<p> <p>
+			<p> <p>
+			<p> <p>
+			<p> <p>
+			<p> <p>
+			
+			
 			
 			<div id="FriendliestFolk">
 	<table id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk" cellspacing="0" border="0">
 	<tbody><tr>
 		<td>
 		<!-- -->
-		</td><td>
-			<div class="Friend">
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="meowie" href="http://www.nyan.cat/"" style=""><img src="./backdrop/meowie.png" border="0"></a></div>
-				<div class="Summary">
-					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="./backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">meowie</a></td>
-				</div>
-			</div>
+
 <!-- -->
 		</td><td></td>
 	</tr>
