--- a/user/3/index.html
+++ b/user/3/index.html
@@ -47,7 +47,7 @@
 				<div style="float:right;width:90%;padding-left:0px;background-color:#B0C4DE;border:1px solid black;">
 					<center><p style="font-size:16">shull's Place</p></center>
 					<p> <p>
-					This person doesn't have any plaes.
+					This person doesn't have any places.
 					<div>
 					<!-- -->
 			</div>
