--- a/user/3/index.html
+++ b/user/3/index.html
@@ -29,7 +29,7 @@
 <div style="width:780px;margin:auto;overflow:auto;margin-top:10px;">
 			<div style="float:left;width:40%;padding-right:px;box-sizing:border-box;">
 				<div style="background-color:#B0C4DE;border:1px solid black;">
-					<center><p style="font-size:16">shull</p></center>
+					<center><p style="font-size:16">mason shull</p></center>
 					<p ><font color="grey">[ Offline ]</font><p>
 					<img src="backdrop/shull.png">
 			<p> <p>
