--- a/user/3/index.html
+++ b/user/3/index.html
@@ -45,7 +45,7 @@
 
 								<div style="float:left;width:60%;box-sizing:border-box;">
 				<div style="float:right;width:90%;padding-left:0px;background-color:#B0C4DE;border:1px solid black;">
-					<center><p style="font-size:16">shull's Place</p></center>
+					<center><p style="font-size:16">mason shull's Place</p></center>
 					<p> <p>
 					This person doesn't have any places.
 					<div>
