--- a/games/index.html
+++ b/games/index.html
@@ -65,7 +65,7 @@
 										<td>
 											<span id="ctl00_cphReBLOX_Label5"><b><font color="Red" size="5">Brick Battle: Glass Houses</font></b></span>
 											<br>
-											<font color="grey">Offline</font>
+											<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 										</td>
 										<td>
 											<img alt="Play!" src="./backdrop/PlayButton_Red.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;rbx8.ReBLOX.com&quot;, 1234, &quot;Brick Battle: Glass Houses&quot;, &quot;&quot;)">
@@ -101,7 +101,7 @@
 										<td>
 											<span id="ctl00_cphReBLOX_Label6"><b><font color="Red" size="5">Brick Battle: Rocket Arena</font></b></span>
 											<br>
-											<font color="grey">Offline</font>
+											<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 										</td>
 										<td>
 											<img alt="Play!" src="./backdrop/PlayButton_Red.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;208.109.110.43&quot;, 1234, &quot;Brick Battle: Rocket Arena&quot;, &quot;&quot;)">
@@ -138,7 +138,7 @@
 									<td>
 										<span id="_ctl0_ContentPlaceHolder1_Label2"><b><font color="Red" size="5">Brick Battle: Crossroads</font></b></span>
 										<br>
-										<font color="grey">Offline</font>
+										<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 									</td>
 									<td>
 										<img alt="Play!" src="./backdrop/PlayButton_Red.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;server9.ReBLOX.com&quot;, 1234, &quot;Brick Battle: Crossroads&quot;)">
@@ -174,7 +174,7 @@
 									<td>
 										<span id="_ctl0_ContentPlaceHolder1_Label1"><b><font color="Red" size="5">Brick Battle: Chaos Canyon</font></b></span>
 										<br>
-										<font color="grey">Offline</font>
+										<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 									</td>
 									<td>
 										<img alt="Play!" src="./backdrop/PlayButton_Red.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;rbx7.ReBLOX.com&quot;, 1234, &quot;Brick Battle: Haunted Mansion&quot;)">
@@ -209,7 +209,7 @@
 									<td>
 										<span id="_ctl0_ContentPlaceHolder1_Label3"><b><font color="Green" size="5">Community Construction Site</font></b></span>
 										<br>
-										<font color="grey">Offline</font>
+										<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 									</td>
 									<td>
 										<img alt="Play!" src="./backdrop/PlayButton_Green.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;server1.ReBLOX.com&quot;, 1233, &quot;Community Construction Site&quot;)">
@@ -246,7 +246,7 @@
 										<td>
 											<span id="_ctl0_cphReBLOX_Label5"><b><font color="Green" size="5">Santa's Winter Stronghold</font></b></span>
 											<br>
-											<font color="grey">Offline</font>
+											<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 										</td>
 										<td>
 											<img alt="Play!" src="./backdrop/PlayButton_Green.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;208.109.110.43&quot;, 1234, &quot;Santas Winter Stronghold&quot;, &quot;&quot;)">
@@ -282,7 +282,7 @@
 									<td>
 										<span id="_ctl0_ContentPlaceHolder1_Label6"><b><font color="Orange" size="5">Brick Battle: Haunted Mansion</font></b></span>
 										<br>
-										<font color="grey">Offline</font>
+										<font color="grey">Offline</font> | <font color="orange">Disabled</font>
 									</td>
 									<td>
 										<img alt="Play!" src="./backdrop/PlayButton_Orange.png" style="cursor: hand" height="90%" onclick="mpJoin(&quot;208.109.110.43&quot;, 1234, &quot;&quot;)">
