--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 				</div>
 				&nbsp;
 				<div class="RoundBorder">
-					<h3>New!</h3> January 14, 2006
+					<h3>New!</h3> January 15, 2006
 					<p>A  new release of ReBLOX is out! New features include:</p>
 					<ul style="text-align:left">
-						<li>Finished main site! 🌟 </li>
-						<li>Finished games!</li>
-						<li>Finished info!</li>
-						<li>Working on Browse (fake User) and Discord. Stay tuned.</li>
+						<li>4 NEW USERS! 🌟 </li>
+						<li>Edited games!</li>
+						<li>Fixed spahgetti code</li>
+						<li>New logo!.</li>
 					</ul>
 				</div>
 			</td>
