--- a/info/index.html
+++ b/info/index.html
@@ -21,7 +21,7 @@
 		</div>
 			</div>
 			
-			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="https://rebloxia.github.io/">Home</a>  |  <a style="color:white;" href="https://rebloxia.github.io/games/">Games</a>  |  <a style="color:white;" href="https://rebloxia.github.io/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="https://rebloxia.github.io/info">Info</a></h1><h1>
+			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal"><a style="color:white;" href="https://rebloxia.github.io/">Home</a>  |  <a style="color:white;" href="https://rebloxia.github.io/games/">Games</a>  |  <a style="color:white;" href="https://rebloxia.github.io/user/">Browse</a>  |  <a style="color:white;" href="https://discord.gg/zsa8aF6">Discord</a>  |  <a style="color:white;" href="https://rebloxia.github.io/info">Info</a></h1><h1>
 		</h1></div>
 		
 		<div style="width:800px;margin:auto;overflow:auto;margin-top:40px;">
