--- a/games/index.html
+++ b/games/index.html
@@ -1,12 +1,12 @@
 <title>
 	ReBLOX
 	
-</title><Link | rel="stylesheet" type="text/css" href="main.css">
+</title><Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 <link href="https://rebloxia.github.io/backdrop/ReBLOX.css" type="text/css" rel="stylesheet"><link id="_ctl0_AdaptersInvariantImportCSS" rel="stylesheet" href="https://rebloxia.github.io/backdrop/Import.css" type="text/css">
 	<link href="https://rebloxia.github.io/backdrop/Frontpage.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Inbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Message.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/ReBLOX(1).css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop/Toolbox.css" type="text/css" rel="stylesheet"><link href="https://rebloxia.github.io/backdrop.css" type="text/css" rel="stylesheet"></head>
 		<form name="aspnetForm" method="post" action="login" id="aspnetForm">
 
-		<Link | rel="stylesheet" type="text/css" href="main.css">
+		<Link | rel="stylesheet" type="text/css" href="https://rebloxia.github.io/backdrop2/main.css">
 	</head>
 	<body>
 		<div class="box" style="padding:0;width:780px;background-color:#b0c4de;">
@@ -37,27 +37,16 @@
 	
 				</div><table width="99%" style="margin-top: 5px" cellspacing="10">
 
-<!--->
-
-<!--->
-
-		<div class="box2" style="padding:0;width:320px;background-color:#b0c4de;">
-			<div id="fake" style="text-align:left;">
-				<div style="width:100%;height:100%;float:left;">
-
-
-						<p> <p>
-			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal">ReBLOX Games & User Games</h1><h1>
-		</h1></div>
-		
-
-								
-				</div><table width="99%" style="margin-top: 5px" cellspacing="10">	
+	<div class="box" style="padding:0;width:360px;background-color:#b0c4de;">
+			<div id="banner2" style="text-align:left;">
+				<div style="width:30%;height:99%;float:left;">
+									</div>
+											<div style="width:33.33%;height:99%;float:left;">
+		</div>
+			</div>
 			
-
-<!--->
-
-<!--->
+			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal">ReBLOX Games  &  User Games</h1><h1>
+		</h1></div>
 
 
 	<br>
