--- a/info/index.html
+++ b/info/index.html
@@ -41,27 +41,12 @@
 			<div id="banner2" style="text-align:left;">
 				<div style="width:30%;height:99%;float:left;">
 									</div>
-<!--->
-
-<!--->
-
-		<div class="box2" style="padding:0;width:320px;background-color:#b0c4de;">
-			<div id="fake" style="text-align:left;">
-				<div style="width:100%;height:100%;float:left;">
-
-
-						<p> <p>
+											<div style="width:33.33%;height:99%;float:left;">
+		</div>
+			</div>
+			
 			</h1><h1 style="float:center;margin:4px;color:white;font-weight:normal">ReBLOX is OPEN!</h1><h1>
 		</h1></div>
-		
-
-								
-				</div><table width="99%" style="margin-top: 5px" cellspacing="10">	
-			
-
-<!--->
-
-<!--->
 
 
 	<br>
