--- a/info/index.html
+++ b/info/index.html
@@ -37,7 +37,12 @@
 	
 				</div><table width="99%" style="margin-top: 5px" cellspacing="10">
 
+<!---->
+<!---->
+			<img src="https://rebloxia.github.io/backdrop/serb.jpg" style="margin:auto;">
 
+<!---->
+<!---->
 
 
 	<br>
