--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<tr>
 		<td></td>
 		<td width="140">
-			<a style="font-size:12px" href="http://www.nyan.cat/"><u>Reset password</u></a></td>
+			<a style="font-size:12px" href="https://rebloxia.github.io/login/"><u>Reset password</u></a></td>
 		<td>
 			
 			<input name="_ctl0:ContentPlaceHolder1:Login1:hiddenEmail" type="hidden" id="_ctl0_ContentPlaceHolder1_Login1_hiddenEmail" value="An email with instructions has been sent to {0}"></td>
