--- a/index.html
+++ b/index.html
@@ -151,15 +151,25 @@ aspnetForm._ctl0_ContentPlaceHolder1_Login1_UserName.focus();
 				<div id="FriendliestFolkPane">
 
 <div id="FriendliestFolk">
-	<h4>Coolest Cats</h4>
+	<h4>Friendliest Folk</h4>
 	<table id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk" cellspacing="0" border="0">
 	<tbody><tr>
-		</td><td>
-				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl3_rbxContentImage" title="meowie" href="http://www.nyan.cat/"" style=""><img src="https://rebloxia.github.io/backdrop/meowie.png" border="0"></a></div>
+		<td>
+			<div class="Friend">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="txarrak" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/txarrakthumbnail.jpg" border="0"></a></div>
 				<div class="Summary">
-					<span class="OnlineStatus"><img id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_iOnlineStatus" src="https://rebloxia.github.io/backdrop/OnlineStatusIndicator_IsOffline.gif"  border="0"></span>
-					<a style="font-size:12px" href="http://www.nyan.cat/">meowie</a></td>
+					<a style="font-size:12px" href="https://rebloxia.github.io/user/1">txarrak</a></a></span>
+
 				</div>
+			</div>
+		</td><td>
+			<div class="Friend">
+				<div class="Avatar"><a id="_ctl0_ContentPlaceHolder1_rbxFriendliestFolkPane_dlFriendliestFolk__ctl4_rbxContentImage" title="goom" href="" style="display:inline-block;cursor:hand;"><img src="https://rebloxia.github.io/backdrop/goomythumbnail.jpg" border="0"></a></div>
+				<div class="Summary">
+					<a style="font-size:12px" href="https://rebloxia.github.io/user/7">goom</a></a></span>
+
+				</div>
+			</div>
 		</td><td></td>
 	</tr>
 </tbody></table>
