--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<table id="_ctl0_ContentPlaceHolder1_DataListCoolPlace" cellspacing="0" cellpadding="8" border="0" height="100%" width="100%">
 	<tbody><tr>
 		<td colspan="4" class="Title">
-						Cool Places
+						<center>Cool Places</center>
 					</td>
 	</tr><tr>
 		<td>
